[package]
name = "balanser"
version = "0.1.0"
authors = ["Michał Błotniak <miblotniak@gmail.com>", "Michał Winiarski <michal.winiarsk@gmail.com>",  "Wojciech Figat <wojtek@figat.pl>" ]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
yaml-rust = "0.4"
